<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|center_vertical"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="0.1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/m_correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_weight="0.45"
        app:srcCompat="@drawable/logo_blanco" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/m_correo"
        app:layout_constraintEnd_toStartOf="@+id/m_correo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/m_correo"
        app:layout_constraintVertical_weight="0.08"
        app:srcCompat="@drawable/round_account_circle_24" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/m_password"
        app:layout_constraintEnd_toStartOf="@+id/m_password"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/m_password"
        app:layout_constraintVertical_weight="0.08"
        app:srcCompat="@drawable/round_lock_24" />

    <EditText
        android:id="@+id/m_correo"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/secondaryColor"
        android:ems="10"
        android:hint="@string/MHint_user"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textColorHighlight="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/m_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_weight="0.12" />

    <EditText
        android:id="@+id/m_password"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/secondaryColor"
        android:ems="10"
        android:hint="@string/MHint_pass"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        android:textColorHighlight="@color/primaryTextColor"
        app:layout_constraintBottom_toTopOf="@+id/ma_ingresar_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.7"
        app:layout_constraintStart_toEndOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/m_correo"
        app:layout_constraintVertical_weight="0.12" />

    <Button
        android:id="@+id/ma_ingresar_but"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_shape"
        android:text="@string/Log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toEndOf="@+id/ma_registrarse_but"
        app:layout_constraintTop_toBottomOf="@+id/m_password"
        app:layout_constraintVertical_weight="0.08" />

    <Button
        android:id="@+id/ma_registrarse_but"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/button_shape"
        android:text="@string/Sign_in"
        app:layout_constraintBottom_toBottomOf="@+id/ma_ingresar_but"
        app:layout_constraintEnd_toStartOf="@+id/ma_ingresar_but"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ma_ingresar_but"
        app:layout_constraintVertical_weight="0.08" />
</android.support.constraint.ConstraintLayout>